countdown timer no longer gets cropped

--- a/content/www/assets/css/flipclock.css
+++ b/content/www/assets/css/flipclock.css
@@ -50,7 +50,7 @@
     text-align: center;
     position: relative;
     width: 100%;
-    margin: 1em;
+    margin: 2em;
 }
 
 /* Skeleton */
